# unav-walker

./: .gitignore  README.md  changelog.md
docs/: Session.vim  area_equiv_poly_reg.ipynb  log.md  log.tex  reduced_units.ods  researchdiary.sty  vd-gamma-phi.ipynb
docs/figs/: .directory
docs/utils/: refs.bib
resultados/: resultados-log.md
scripts/: ;  ac_vs_gamma.py  anal-vel-single-particle-OLD.py  anal-vel-single-particle.py  anal-vel.py  anal-velocity-profile.py  calcula-flujos.py  compress.sh  dovideo.sh  ejemplo-start-slurm.sh  flujo-OLDOK.py  flujo.py  flux-r.py  get_amp.py  get_mean_vel.py  get_mean_vel_2w.py  get_mean_vel_fase.py  heatmap-vel.py  heatmap-velocities.py  histo_tiempos.py  makePMStress.py  makePreMovie.py  mapa-calor-presion.py  params.tpl  plot-caudales-D.py  plot-flujos.py  plot-froce.py  plot-fuerza-fondo-t.py  plot-histo-tiempos-D.py  plot-perfil-vel.py  plot-perfiles-mean.py  plot-pf-t-mean.py  plot-pf-t.py  plot_fig2.py  plot_fig2_MM.py  plot_fig3.py  plot_fig4_MM.py  plot_perfiles.py  run_inis-t06.sh  run_inis.sh  (+7 more)
src/: Makefile  Session.vim  globalsetup.cpp  globalsetup.hpp  params.in  silo-vib  silo-vib.cpp  siloAux.cpp  siloAux.hpp  simulacion.cpp  simulacion.hpp  test-MM-K  test-karnopp  test-karnopp-2f  test-sc  test-sc2  walkers-forceWall  walkers-forceWall.cpp
src-silo/: .exrc  Makefile  Session.vim  globalsetup.cpp  globalsetup.hpp  params.in  rng.cpp  rng.hpp  silo-vib  silo-vib.cpp  siloAux.cpp  siloAux.hpp
src-silo/test/: CMakeCache.txt  CMakeLists.txt  Makefile  (+3 more)
tools/: CMakeLists.txt  dem_reader.cpp  dem_reader.hpp  dem_types.hpp  force_map2d.cpp  force_profile.cpp  read_demo.cpp  thread_pool.hpp  vel_profile.cpp
tools/scripts/: plot-fuerzas.py  plot-mapa-fuerzas.py  plot-perfil.py
utils/: figs.mplstyle  reduced_units.ods
